--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: implicitly_animated_reorderable_list
+name: animated_list_plus
 description: A Flutter ListView that implicitly animates between the changes of
   two lists with the support to reorder its items.
 version: 0.4.3
@@ -8,9 +8,9 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  async: ^2.8.1
   flutter:
     sdk: flutter
-  async: ^2.8.1
   meta: ^1.7.0
 
 dev_dependencies:
