--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ homepage: https://github.com/wwwdata/implicitly_animated_reorderable_list
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
   async: ^2.8.1
@@ -16,5 +17,3 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-flutter: null
