Run test matrix from 3.7.0 until 3.7.3 (#15)
To actually check nothing breaks for older versions. So we can find out
when something is unsupported and we need to bump the minimum supported
version for this package.

The minimum version is now set to 3.7.0 because of deprecations in the
Flutter Framework

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,9 +8,13 @@ on:
 
 jobs:
   build:
+    strategy:
+      fail-fast: false
+      matrix:
+        version: [3.7.0, 3.7.3]
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       flutter_channel: "stable"
-      flutter_version: "3.7.0"
+      flutter_version: ${{ matrix.version }}
       test_recursion: true
       min_coverage: 0
