--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     path: ../
   flutter:
     sdk: flutter
-  flutter_slidable: ^0.6.0-nullsafety.0
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
